add remote method

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -36,7 +36,7 @@
     "dataSource": null
   },
   "person": {
-    "dataSource": "db",
+    "dataSource": "myPostgress",
     "public": true
   }
 }
